metadata-retriever/metadata/objects/Dealer_Locator__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Boxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Locators</relationshipLabel>
        <relationshipName>Dealer_Locators</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <formula>Dealer_Name__r.SF_Dealer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metro_Rural__c</fullName>
        <label>Metro/Rural</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offered_Service__c</fullName>
        <label>Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PMA__c</fullName>
        <label>PMA</label>
        <picklist>
            <picklistValues>
                <fullName>ALICE SPRINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGLE PARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALLARAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENDIGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLACKTOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUNBURY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUNDABERG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIRNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMPBELLTOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANBERRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COFFS HARBOUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DANDENONG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DARWIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUBBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERNTREE GULLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEELONG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GORDON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOSFORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOBART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLAWARRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAUNCESTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LISMORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACKAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MELBOURNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILDURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIRANDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONA VALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MORNINGTON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTHN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Dealer Locator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Dealer_Number__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Suburb__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Offered_Service__c</columns>
        <columns>PMA__c</columns>
        <columns>Region__c</columns>
        <columns>Metro_Rural__c</columns>
        <columns>Category__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DL-{000000000}</displayFormat>
        <label>Dealer Locator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Locators</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>